package model.abstracted.enums;

public enum State {
    EATING("ест"),  
    SLEEPING("спит"),
    WALKING("гуляет");

    private final String text;

    State(String text) {
        this.text = text;
    }

    @Override
    public String toString() {
        return this.text;
    }
}
