package model.abstracted.interfaces;

public interface Eatable {}
