package model.abstracted.interfaces;

public interface Lookable {}
