package model.abstracted;

public interface Location {} 
